tests/fixtures/invalid/dict_bitxor_none.py
# Cannot bitwise XOR Dict[str, int] and None
x: dict[str, int] = {"a": 1} ^ None
